--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /206
-title: "This Week In React #206: Next.js, Compiler, DevTools, State Of React, nuqs, Chakra UI, Remix, shadcn/ui, Turbopack, Microfrontends, Fumadocs, NewArch, react-native-mmkv, whip-whep, Svelte, Turborepo, Hono..."
+title: "This Week In React #206: Next.js, Compiler, DevTools, State Of React, nuqs, Chakra UI, Remix, shadcn/ui, Turbopack, Microfrontends, Fumadocs, NewArch, react-native-mmkv, whip-whep, Svelte, Hono..."
 authors: [matthieugicquel, cyrilbo]
 date: 10-23-2024
 ---
@@ -15,7 +15,7 @@ We’ve got a bunch of great articles too, from optimizing state with React Cach
 
 Speaking of React Native, v0.76 is coming very soon! A major milestone as it's the first version to activate the New Architecture by default, the culmination of years of work that deserves to be celebrated! 🥳️
 
-The [State of React 2024 survey](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react) is now open and waiting for your answers.
+The [State of React 2024 survey](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react) is now open and waiting your answers.
 
 Let’s dive in!
 
