--- a/website/newsletter/207/index.mdx
+++ b/website/newsletter/207/index.mdx
@@ -27,13 +27,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Securing Node.js Express APIs with Clerk and React](/emails/issues/204/clerk.jpg)](https://go.clerk.com/WER1UiL)
+[![Build a full stack app using React Native & Expo](/emails/issues/207/clerk.jpg)](https://go.clerk.com/5INu2lf)
 
-**[Securing Node.js Express APIs with Clerk and React](https://go.clerk.com/WER1UiL)**
+**[Build a full stack app using React Native & Expo](https://go.clerk.com/5INu2lf)**
 
-Learn how to use Clerk with Express to authenticate API requests.
-
-Utilize the `ClerkExpressWithAuth()` and `ClerkExpressRequireAuth()` middleware to secure any endpoint and integrate authentication without the complexity of building it from scratch.
+🛠️ Build a cross-platform full-stack app using a single codebase with scalable, real-time backend support and user management.
 
 ---
 
