--- a/website/newsletter/207/index.mdx
+++ b/website/newsletter/207/index.mdx
@@ -53,12 +53,12 @@ The sister blog post [Our Journey with Caching](https://nextjs.org/blog/our-jour
 - 📖 [Using shadcn/ui with Next.js 15 and React 19](https://ui.shadcn.com/docs/react-19): Explains how to handle peer deps, gives status of React 19 support of underlying libs.
 - 📣 [Netlify Joins OpenNext](https://www.netlify.com/blog/netlify-joins-opennext/): They moved their adapter to the OpenNext org and started collaborating with Cloudclare and SST to make Next.js more portable.
 - 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - [Free remote tickets are available now, click here !](https://gitnation.com/badges/react-day-berlin-2024/sara_vieira?from=This+Week+In+React)
-- 📜 [Using Shadcn UI without a Tailwind Config File](https://www.luisball.com/blog/shadcn-ui-with-tailwind-v4): Use Tailwind v4 (alpha) with shadcn/ui in a Next.js 15 app. Unfortunately you’ll have to copy/paste the components/dependencies manually until the CLI gets updated.
+- 📜 [Live Streaming with React — More Rust in the JavaScript Ecosystem](https://blog.swmansion.com/live-streaming-with-react-more-rust-in-the-javascript-ecosystem-f83a0371e16c): This innovative project uses a custom React renderer to control a media server doing live video mixing. The article explains their implementation decisions.
 - 📜 [Conditional React hooks pattern](https://robinmalfait.com/blog/conditional-react-hooks-pattern): Maintainer of Headless UI shares trick he uses in the library, passing `enabled` as first parameter to hooks.
 - 📜 [HTML Form Validation is heavily underused](https://expressionstatement.com/html-form-validation-is-heavily-underused): Creates a convenient React abstraction on top of `input.setCustomValidity`.
+- 📜 [Using Shadcn UI without a Tailwind Config File](https://www.luisball.com/blog/shadcn-ui-with-tailwind-v4): Use Tailwind v4 (alpha) with shadcn/ui in a Next.js 15 app. Unfortunately you’ll have to copy/paste the components/dependencies manually until the CLI gets updated.
 - 📜 [Add an RSS Feed to a Next.js Blog](https://didoesdigital.com/blog/nextjs-blog-09-rss/): Use a static route returning XML. Note I beg you to add an RSS feed, otherwise I have to pay Inoreader 0.20€/month to track your blog through selectors 😅.
 - 📜 [How to roll your own auth in JavaScript & TypeScript](https://www.robinwieruch.de/how-to-roll-your-own-auth/): Step-by-step guide to implement auth in Next.js 15\.
-- 📜 [Live Streaming with React — More Rust in the JavaScript Ecosystem](https://blog.swmansion.com/live-streaming-with-react-more-rust-in-the-javascript-ecosystem-f83a0371e16c): This innovative project uses a custom React renderer to control a media server doing live video mixing. The article explains their implementation decisions.
 - 📜 [useContextSelector: Speeding Up React Apps With Large Context](https://marmelab.com/blog/2024/10/16/usecontextselector-a-faster-usecontext-for-react.html)
 - 📜 [When to use redirect() vs. router.push() in Next.js](https://darios.blog/posts/redirect-vs-router-push-in-nextjs)
 - 📜 [How To Set Up Next.js 15 For Production In 2024](https://janhesters.com/blog/how-to-set-up-nextjs-15-for-production-in-2024)
@@ -84,7 +84,9 @@ Blacksmith runs your GitHub Actions substantially faster by running them on mode
 
 ## 📱 React-Native {#react-native}
 
-[**React Native 0.76 \- New Architecture by default, React Native DevTools, and more**](https://reactnative.dev/blog/2024/10/23/release-0.76-new-architecture)
+[![New Architecture by default, DevTools, and more](/emails/issues/207/newarch.jpg)](https://reactnative.dev/blog/2024/10/23/release-0.76-new-architecture)
+
+[**React Native 0.76 \- New Architecture by default, DevTools, and more**](https://reactnative.dev/blog/2024/10/23/release-0.76-new-architecture)
 
 React Native 0.76 is out with major updates\! The New Architecture is now enabled by default, there's a new React Native DevTools for improved debugging, and CSS support for `boxShadow` and `filter` for enhanced UI effects (available only with the new architecture). Be aware of some breaking changes: minimum SDK requirements have been raised to iOS 15.1 and Android SDK 24 (Android 7). Time to upgrade and check it out\!
 
@@ -102,7 +104,7 @@ v0.76 is cool, but what’s even better is that the [New Architecture is here](h
 - 📜 [Improve User Experience and First-Time App Load with Expo and libSQL](https://www.expostarter.com/blog/expo-libsql-improve-app-performance)
 - 📜 [We're forking Flutter. This is why](https://flutterfoundation.dev/blog/posts/we-are-forking-flutter-this-is-why/)
 - 📦 [Expo SDK 52 beta](https://expo.dev/changelog/2024/10-24-sdk-52-beta): Huge release including New Architecture, DOM Components, Expo Router 4, preview of Server Components… We’ll cover all this in a few weeks once it’s table\!
-- 📦 [NativeWind 4.1](https://www.nativewind.dev/v4-1-announcement): NativeWind v4 is finally published as latest on npm and ready for produ
+- 📦 [NativeWind 4.1](https://www.nativewind.dev/v4-1-announcement): NativeWind v4 is finally published as latest on npm and ready for production!
 - 📦 [Jetpack Compose React Native](https://github.com/andrew-levy/jetpack-compose-react-native/): Andrew first created SwiftUI bindings and now working on an equivalent for Jetpack Compose. These are cool libraries that may help native developers join our community\!
 - 📦 [React Native Bottom Tabs 0.1 \+ 0.2 \- New Architecture by default, Apple TV support, long press, Expo config plugin](https://github.com/okwasniewski/react-native-bottom-tabs/releases)
 - 📦 [React Native visionOS 0.76 \- New Architecture by default, debugger support](https://github.com/callstack/react-native-visionos/releases/tag/v0.76.0-visionos)
