--- a/website/newsletter/207/index.mdx
+++ b/website/newsletter/207/index.mdx
@@ -8,7 +8,13 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This is another great React week.
+
+Vercel has unveiled new super-interesting caching APIs for Next.js, and the React Native ecosystem is on fire!
+
+On my side, I'm a bit tired of Twitter penalizing me for commenting external links. I'm giving Bluesky a try ([@sebastienlorber.com](https://bsky.app/profile/sebastienlorber.com)). Come say hi if you are there.
+
+Don't forget to fill in the [State of React survey](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react), and mention that you read the newsletter 😇.
 
 <!-- truncate -->
 
@@ -133,6 +139,10 @@ v0.76 is cool, but what’s even better is that the [New Architecture is here](h
 
 ## 🤭 Fun {#fun}
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/207/meme.jpg)](https://x.com/t3dotgg/status/1849572068297408568)
+
+[![alt](/emails/issues/207/meme2.jpg)](https://x.com/o_kwasniewski/status/1850966131361649120)
+
+[![alt](/emails/issues/207/meme3.jpg)](https://x.com/cortinico/status/1849278806718128379)
 
 See ya! 👋
