--- a/website/newsletter/207/index.mdx
+++ b/website/newsletter/207/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /207
-title: "This Week In React #207: use cache, Next.js, shadcn/ui, Headless UI, RN 0.76, New Architecture, NativeWind, Expo 52, Edge-to-Edge, RNTL, Reassure, Bottom Tabs, Flutter, Node.js..."
+title: "This Week In React #207: Next.js, use cache, shadcn/ui, Headless UI, RN 0.76, New Architecture, NativeWind, Expo 52, Edge-to-Edge, RNTL, Reassure, Bottom Tabs, Flutter, Node.js..."
 authors: [slorber]
 date: 10-30-2024
 ---
