--- a/website/newsletter/208/index.mdx
+++ b/website/newsletter/208/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 <Todo />
 
-*   🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Brussels - 18 October - POST MENTION
+- 🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Brussels - 18 October - POST MENTION
 
 <!-- truncate -->
 
@@ -32,14 +32,10 @@ import Support from "../_support.mdx";
 
 AG Grid is a fast, free and fully customisable React Table. Used by **90% of the Fortune 500**, AG Grid is **100% open source** with over **4 million npm downloads per month**:
 
-*   🆓 **Free:** Access 100s of features such as **Sorting**, **Filtering**, **Pagination**, **Cell Editing** and more, all for **free** - forever.
-    
-*   **🚀 Fast:** Display **millions of cells** out of the box, without compromising on performance.
-    
-*   **🎨 Customisable:** Add your own components to cells, rows & columns and use the **Theming API** to build & customise Themes.
-    
-*   🏢 **Enterprise Features:** Purchase a licence for lifetime access to advanced features including **Pivoting**, **Grouping**, **Master / Detail** and **Integrated Charts** (powered by our React Charting Library, [AG Charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-1)). Try it for free - no trial license required.
-    
+- 🆓 **Free:** Access 100s of features such as **Sorting**, **Filtering**, **Pagination**, **Cell Editing** and more, all for **free** - forever.
+- **🚀 Fast:** Display **millions of cells** out of the box, without compromising on performance.
+- **🎨 Customisable:** Add your own components to cells, rows & columns and use the **Theming API** to build & customise Themes.
+- 🏢 **Enterprise Features:** Purchase a licence for lifetime access to advanced features including **Pivoting**, **Grouping**, **Master / Detail** and **Integrated Charts** (powered by our React Charting Library, [AG Charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-1)). Try it for free - no trial license required.
 
 Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-1)
 
@@ -67,11 +63,49 @@ The Next.js team has announced the stable release of Next.js 15, and Clerk is co
 
 ## 📱 React-Native {#react-native}
 
-This section is authored by [Benedikt](https://twitter.com/bndkt).
+[![React Navigation 7.0](/emails/issues/208/reactnavigation7.jpg)](https://reactnavigation.org/blog/2024/11/06/react-navigation-7.0/)
 
-<Todo />
+[**React Navigation 7.0**](https://reactnavigation.org/blog/2024/11/06/react-navigation-7.0/)
+
+React Navigation v7 is now out and should power the upcoming Expo Router v4 coming with Expo SDK 52, both in beta. My favorite highlights are:
+
+- Screen preloading: You can prepare screens ahead of time prior to navigating to them to increase perceived performance.
+- Static API: Simplifies the navigator configuration, and makes it easier to work with TypeScript and deep linking.
+
+---
+
+[**We've just finished migrating the Shopify mobile app to React Native**](https://threadreaderapp.com/thread/1853619638141071573.html)
+
+Mustafa (Director of Engineering) announced on X that Shopify finished migrating their flagship app with 586 screens to React Native, with very positive results. I hope we'll get a detailed blog post soon.
+
+- 1.8 millions of lines of code removed
+- 86% of code sharing between iOS and Android
+- 59% faster screen loading
+- 44% faster app launch
+- 63% faster webviews
+- Reducing app crashes
+- Improving apps store ratings
+
+---
 
 - 💸 [Create a customizable PDF viewer in React using Puppeteer. Learn to generate styled PDFs easily with Node and any JavaScript framework.](https://apryse.com/blog/react/react-to-pdf?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=1106)
+- 💬 [Replace CocoaPods with Tuist instead of Swift Package Manager](https://github.com/react-native-community/discussions-and-proposals/issues/587#issuecomment-2457647318): The creator of the iOS toolchain Tuist raises potential problems adopting SPM in React Native and suggests an alternative.
+- 📜 [Getting started with Nitro](https://www.renanmav.com/blog/getting-started-with-nitro)
+- 📜 [My plan to port Electron app CSS themes into React Native](https://www.devas.life/my-plan-to-port-electron-app-css-themes-into-react-native/)
+- 📜 [The architecture of a conference application built with Expo](https://expo.dev/blog/the-architecture-of-a-conference-application-built-with-expo)
+- 📦 [Reanimated 3.16 \- RN 0.76, new React-Compiler-safe get/set APIs, logging](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.16.0)
+- 📦 [Nitro 0.14 \- RN 0.76, getHybridObjectConstructor](https://github.com/mrousavy/nitro/releases/tag/v0.14.0)
+- 📦 [Bottom Tabs 0.3 \- haptic feedback, Android back behavior props, preventDefault()](https://github.com/okwasniewski/react-native-bottom-tabs/releases)
+- 📦 [Vision Camera 4.6 \- RN 0.76, videoBitRate for Android, CameraX upgrade](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v4.6.0)
+- 📦 [Skia 1.5.1 \- ProMotion 120 fps](https://github.com/Shopify/react-native-skia/releases/tag/v1.5.1)
+- 📦 [Screens 3.35 \- RN 0.76, add RSC ‘use client’, dynamic frameworks, blurEffect](https://github.com/software-mansion/react-native-screens/releases/tag/3.35.0)
+- 📦 [Safe Area Context 4.14 \- macOS support](https://github.com/th3rdwave/react-native-safe-area-context/releases/tag/v4.13.0)
+- 📦 [Maests \- Write and compose Maestro flows in TypeScript](https://github.com/shoma-mano/maests)
+- 🎥 [Expo \- How to run end to end tests on EAS Build](https://www.youtube.com/watch?v=-o-bfIRrg9U)
+- 🎥 [Simon Grimm \- Tailwind is going Mobile](https://www.youtube.com/watch?v=I_o17M30m5I)
+- 🎥 [Catalin Miron \- Wallpaper Reanimated Carousel](https://www.youtube.com/watch?v=qaGRabISXwI)
+- 🎥 [Beto \- Sending Over-the-Air (OTA) Updates with EAS Update](https://www.youtube.com/watch?v=DWpcD6bvTRA)
+- 🎙️ [Rocket Ship 53 \- Why Accessibility in React Native matters with Britta Evans-Fenton](https://share.transistor.fm/s/ccfd5491)
 
 ---
 
